# AOC2022

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  template.py
day00/: main.py
day01/: main.py
day02/: main.py
day03/: main.py
day04/: grammar.lark  main.py
day05/: main.py
day06/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day10/: main.py
day11/: Makefile  bfs.cpp  bfs.html  bfs.pxd  bfs.pyx  main.py  setup.py
