[tool.poetry]
name = "aoc2022"
version = "1.0.0"
description = "Advent of Code - 2022 edition (https://adventofcode.com/2022)"
authors = ["Javinator9889 <dev@javinator9889.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
lark = "^1.1.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pylint = "^2.15.8"
flake8-pylint = "^0.1.3"
pre-commit = "^2.20.0"
flake8-black = "^0.3.5"
flake8-isort = "^5.0.3"
flake8-simplify = "^0.19.3"
flake8-warnings = "^0.4.0"
flake8-comprehensions = "^3.10.1"
flake8-pyprojecttoml = "^0.0.2"
flake8-annotations-coverage = "^0.0.6"
flake8-annotations = "^2.9.1"
flake8-future-annotations = "^1.0.0"
flake8-type-checking = "^2.3.0"

[tool.black]
line-length = 99
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 99
ignore = ["W503", "W605"]
extend-ignore = ["E203", "F401", "F403", "F405", "W504"]
exclude = ["template.py"]

[tool.pylint.'MESSAGES CONTROL']
ignore = ["template.py"]
disable = [
    "R0801",
    "R0913",
    "R0904",
    "R0903",
    "R0902",
    "W0511",
    "C0116",
    "C0115",
    "W0703",
    "R0914",
    "R0914",
    "C0302",
    "R0912",
    "R0915",
    "R0401",
    "C0411",
    "C0103",
    "W0603",
    "W0613",
    "W0401",
    "W0614",
    "E1120",
    "W0108",
    "W0622",
    "C0114",
    "W1514",
    "W0621",
    "W0212",
    "W0123",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
